# memoir

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/docker/: Dockerfile  README.md  build-n-run.sh  entrypoint.sh
examples/docker/workdir/: conanfile.py
examples/pyplot/: README.md  plot.py
libmemoir/: Cargo.toml
libmemoir/src/: control.rs  csvdump.rs  daemon.rs  ipc_common.rs  lib.rs  process.rs
memoirctl/: Cargo.toml
memoirctl/src/: main.rs  parsetime.rs
