[package]
name = "memoir"
version = "0.0.1"
edition = "2021"

[dependencies]
interprocess = "1.2.1"
anyhow = "1.0.79"
csv = "1.3.0"
ciborium = "0.2.1"
serde = { version = "1.0.195", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16.0"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.13"
